crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unused_invalid_lemma_prepass.rs
/*@
fn bad(x: i32)
  req true
  ens true
{
    assert false;
}
*/

fn helper() {}

fn main() {
    helper();
}
